# ORVIKA-AI-

./: .gitignore  .graphifyignore  .prettierignore  0development.html  0mimo.html  CHANGELOG.md  LICENSE  ORVIKA_AI_SPRINT_PLAN (1).md  ORVIKA_AI_SPRINT_PLAN.md  ORVIKA_BUILD_STATUS.md  ORVIKA_GRAPHIFY_CONTEXT.md  README.md  eslint.config.js  index.html  package-lock.json  package.json
src/: App.tsx  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_create_sessions.down.sql  001_create_sessions.up.sql  002_create_messages.down.sql  002_create_messages.up.sql  003_create_documents.down.sql  003_create_documents.up.sql  004_create_document_chunks.down.sql  004_create_document_chunks.up.sql  005_create_research_sessions.down.sql  005_create_research_sessions.up.sql  006_create_research_queries.down.sql  006_create_research_queries.up.sql  007_create_audit_log.down.sql  007_create_audit_log.up.sql  008_create_settings.up.sql  009_create_api_keys.up.sql  010_create_model_downloads.down.sql  010_create_model_downloads.up.sql  011_placeholder.down.sql  011_placeholder.up.sql  012_seed_default_settings.up.sql  013_add_session_system_prompt.up.sql  014_create_compliance_templates.down.sql  014_create_compliance_templates.up.sql  015_add_weaviate_fields.down.sql  015_add_weaviate_fields.up.sql  016_create_chunks_fts.down.sql  016_create_chunks_fts.up.sql
src-tauri/python/: ai_server.py  embedder.py  ocr_parser.py  parser.py  requirements.txt  transcriber.py
src-tauri/src/: lib.rs  main.rs
(+133 files in other folders)
