[package]
name = "orvika-ai"
version = "0.1.0"
description = "ORVIKA AI — local-first research assistant"
authors = ["ORVIKA AI"]
edition = "2021"
rust-version = "1.78"

[lib]
name = "orvika_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
sha2 = "0.10"
futures-util = "0.3"
aes-gcm = "0.10"
rand = { version = "0.8", features = ["std"] }
text-splitter = { version = "0.16", features = ["markdown"] }
tauri-plugin-dialog = "2.7.1"
regex = "1.12.3"
lazy_static = "1.5.0"

[target.'cfg(target_os = "windows")'.dependencies]
wincredentials = "0.3.0"



[dev-dependencies]
tempfile = "3"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
